// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout tests to render Layout when loading and no error:  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="navbar navbar-expand-lg navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="#home"
          >
            <img
              alt="React Bootstrap logo"
              class="d-inline-block align-top"
              height="50"
              src="planet.png"
              width="50"
            />
            <span
              style="font-weight: bold; font-size: 30px; margin-left: 10px;"
            >
              Space Traveler's Hub
            </span>
          </a>
          <button
            aria-controls="navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="navbar-nav"
          >
            <ul
              class="ms-auto navbar-nav nav-pills"
            >
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/rockets"
                  style="color: black;"
                >
                  Rockets
                </a>
              </li>
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/missions"
                  style="color: black;"
                >
                  Missions
                </a>
              </li>
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/my-profile"
                  style="color: black;"
                >
                  My Profile
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="container"
      />
    </div>
  </body>,
  "container": <div>
    <nav
      class="navbar navbar-expand-lg navbar-light bg-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="#home"
        >
          <img
            alt="React Bootstrap logo"
            class="d-inline-block align-top"
            height="50"
            src="planet.png"
            width="50"
          />
          <span
            style="font-weight: bold; font-size: 30px; margin-left: 10px;"
          >
            Space Traveler's Hub
          </span>
        </a>
        <button
          aria-controls="navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="navbar-nav"
        >
          <ul
            class="ms-auto navbar-nav nav-pills"
          >
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/rockets"
                style="color: black;"
              >
                Rockets
              </a>
            </li>
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/missions"
                style="color: black;"
              >
                Missions
              </a>
            </li>
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/my-profile"
                style="color: black;"
              >
                My Profile
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Layout tests to render Layout with an error:  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="navbar navbar-expand-lg navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="#home"
          >
            <img
              alt="React Bootstrap logo"
              class="d-inline-block align-top"
              height="50"
              src="planet.png"
              width="50"
            />
            <span
              style="font-weight: bold; font-size: 30px; margin-left: 10px;"
            >
              Space Traveler's Hub
            </span>
          </a>
          <button
            aria-controls="navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="navbar-nav"
          >
            <ul
              class="ms-auto navbar-nav nav-pills"
            >
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/rockets"
                  style="color: black;"
                >
                  Rockets
                </a>
              </li>
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/missions"
                  style="color: black;"
                >
                  Missions
                </a>
              </li>
              <li
                class="mx-2 nav-item"
              >
                <a
                  class=""
                  href="/my-profile"
                  style="color: black;"
                >
                  My Profile
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="container"
      />
    </div>
  </body>,
  "container": <div>
    <nav
      class="navbar navbar-expand-lg navbar-light bg-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="#home"
        >
          <img
            alt="React Bootstrap logo"
            class="d-inline-block align-top"
            height="50"
            src="planet.png"
            width="50"
          />
          <span
            style="font-weight: bold; font-size: 30px; margin-left: 10px;"
          >
            Space Traveler's Hub
          </span>
        </a>
        <button
          aria-controls="navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="navbar-nav"
        >
          <ul
            class="ms-auto navbar-nav nav-pills"
          >
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/rockets"
                style="color: black;"
              >
                Rockets
              </a>
            </li>
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/missions"
                style="color: black;"
              >
                Missions
              </a>
            </li>
            <li
              class="mx-2 nav-item"
            >
              <a
                class=""
                href="/my-profile"
                style="color: black;"
              >
                My Profile
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MyRockets tests to render MyRockets with all rockets booked:  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2>
        Rockets booked
      </h2>
      <div
        class="list-group"
      >
        <div
          class="fw-bold list-group-item"
        >
          Rocket 1
        </div>
        <div
          class="fw-bold list-group-item"
        >
          Rocket 2
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h2>
      Rockets booked
    </h2>
    <div
      class="list-group"
    >
      <div
        class="fw-bold list-group-item"
      >
        Rocket 1
      </div>
      <div
        class="fw-bold list-group-item"
      >
        Rocket 2
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rocket element tests to render rocket element:  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="list-group-item"
      >
        <div
          class="card mb-3"
        >
          <div
            class="row g-0"
          >
            <div
              class="col-md-4"
            >
              <img
                alt="..."
                class="img-fluid rounded-start"
                src="rocket1.jpg"
              />
            </div>
            <div
              class="col-md-8"
            >
              <div
                class="card-body"
              >
                <h5
                  class="card-title"
                >
                  Rocket 1
                </h5>
                <p
                  class="card-text"
                >
                  <span
                    class="badge rounded-pill bg-primary"
                    role="status"
                  >
                    Available
                  </span>
                  A rocket description
                </p>
                <button
                  class="btn btn-primary"
                  role="button"
                  type="button"
                >
                  Reserve rocket
                </button>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="list-group-item"
    >
      <div
        class="card mb-3"
      >
        <div
          class="row g-0"
        >
          <div
            class="col-md-4"
          >
            <img
              alt="..."
              class="img-fluid rounded-start"
              src="rocket1.jpg"
            />
          </div>
          <div
            class="col-md-8"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Rocket 1
              </h5>
              <p
                class="card-text"
              >
                <span
                  class="badge rounded-pill bg-primary"
                  role="status"
                >
                  Available
                </span>
                A rocket description
              </p>
              <button
                class="btn btn-primary"
                role="button"
                type="button"
              >
                Reserve rocket
              </button>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
